# finai-risk-platform

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260304_0001_initial.py  20260513_0002_enable_pgvector.py  20260513_0003_add_embedding_to_risk_analyses.py  20260521_0004_add_documents_and_chunks.py  20260607_0005_add_eval_score.py  20260607_0006_add_llm_call_metrics.py
app/: __init__.py  main.py
app/api/: documents.py  history.py  metrics.py  price.py  risk.py  risk_profile.py  risk_search.py
app/core/: config.py  logging.py
app/db/: __init__.py  models.py  session.py
app/domain/: metrics.py  risk_level.py  scoring.py
app/metrics/: __init__.py  risk.py
app/ml/: __init__.py  dataset.py  model.py  train.py
app/repositories/: __init__.py  api_key_repo.py  document_repo.py  metrics_repo.py  models.py  risk_analysis_repo.py
app/schemas/: __init__.py  errors.py  risk.py
app/scoring/: __init__.py  risk_scoring.py
app/security/: __init__.py  api_key.py
app/services/: __init__.py  document_service.py  embeddings.py  eval.py  llm.py  metrics_logger.py  ml_service.py  pricing.py  rag.py  risk_service.py
artifacts/: risk_label_encoder.joblib  risk_model.joblib
tests/alembic/: test_initial_migration.py
tests/api/: test_api_endpoints.py  test_auth_protection.py
tests/domain/: test_scoring.py
tests/repositories/: test_api_key_repo.py  test_metrics_repo.py  test_risk_analysis_repo.py  test_session.py
(+4 files in other folders)
