[project]
name = "finai-risk-platform"
version = "0.1.0"
description = "AI-powered financial risk & insight backend"
authors = [
    {name = "serhii perevoznyi"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "yfinance (>=1.1.0,<2.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "sqlmodel (>=0.0.31,<0.0.32)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "mlflow (>=3.9.0,<4.0.0)",
    "shap (>=0.50.0,<0.51.0)",
    "xgboost (>=3.1.3,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "black (>=26.1.0,<27.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
